<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="Project_name">MyOPSC7312</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_name">Penny-Wise</string>
    <string name="app_icon_desc">App Icon</string>
    <string name="currency_converter_desc">Currency converter</string>
    <string name="settings_desc">Profile</string>
    <string name="settings_edit_btn">Edit Profile</string>
    <string name="sign_out">Sign Out</string>
    <string name="save_changes">Save Changes</string>
    <string name="username_lbl">Username:</string>
    <string name="password_lbl">Password:</string>
    <string name="language_lbl">Language</string>
    <string name="savings_text">Savings</string>
    <string name="assets_value">0</string>
    <string name="profile">Me</string>
    <string name="home">Home</string>
    <string name="account_header_text">Accounts</string>
    <string name="networth_text">Networth</string>
    <string name="asset_text">Assets</string>
    <string name="liabilities_text">Liabilities</string>
    <string name="add_account">Add account</string>
    <string name="converter">Converter</string>
    <string name="convert">Convert</string>
    <string name="select_account_type">Select account type</string>
    <string name="addacount_header_text">Add Account</string>
    <string name="btn_cancel">Cancel</string>
    <string name="name">Name:</string>
    <string name="groceries_lbl">Groceries</string>
    <string name="amount_lbl">Amount:</string>
    <string name="expense_header">Log Expense</string>
    <string name="expense_title">Log Expense Here</string>
    <string name="account_balance">Account Balance</string>
    <string name="account_balance_prompt">Enter account balance</string>
    <string name="account_name_prompt">Enter account name</string>
    <string name="converter_hint">Enter Amount</string>
    <string name="home_currency">From Currency</string>
    <string name="target_currency">To Currency</string>
    <string name="account_type">Account Type</string>
    <string name="analytics_header_text">Analytics</string>
    <string name="monthStats">Monthly Statistics</string>
    <string name="arrow"> > </string>
    <string name="balances">Balance</string>
    <string name="expense">Expenses</string>
    <string name="month">Month</string>
    <string name="back">Back</string>
    <string name="budget_header_text">Budget</string>
    <string name="budget_header">Make your Budget</string>
    <string name="submit">Submit</string>
    <string name="monthBudget">Monthly Budget</string>
    <string name="darkMode">Dark Mode</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="forgot_psw">Forgot your password?</string>
    <string name="biometrics_signin">---------  or sign in with finger print scan   ---------</string>
    <string name="noAccount">Don\'t have an account?</string>
    <string name="signUp">Sign up</string>
    <string name="conPass">Confirm Password</string>
    <string name="register">Register</string>
    <string name="signIn">---------   Sign in   ---------</string>
    <string name="e.g.Groceries">E.g. Groceries</string>
    <string name="calculator">Calculator</string>
    <string-array name="account_types">
        <item>Savings</item>
        <item>Checkings</item>
    </string-array>
</resources>
