<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddAccountFragment">

    <LinearLayout
        android:id="@+id/Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="-200dp"
        android:orientation="vertical">

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout4"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_2"
        android:hint="@string/select_account_type"
        app:layout_constraintTop_toBottomOf="@+id/AccountType"
        tools:layout_editor_absoluteX="16dp">


        <AutoCompleteTextView
            android:id="@+id/autoCompleteText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:id="@+id/headerBackgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/headerBackground"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:alpha="0.6"
            android:background="@color/headerGreen"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/addacount_header_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/logo" />

    </FrameLayout>

    <Button
        android:id="@+id/btnAddAccount"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:text="@string/add_account"
        android:backgroundTint="@color/blockGreen"
        app:cornerRadius="15dp"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout4" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:backgroundTint="@color/blockGreen"
        android:text="@string/btn_cancel"
        android:textColor="@color/white"
        app:cornerRadius="15dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAddAccount" />

    <TextView
        android:id="@+id/Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerBackgroundContainer" />

    <EditText
        android:id="@+id/EnterName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/account_name_prompt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Name"
        android:background="@drawable/shape_2"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/AccountBalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/account_balance"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EnterName" />

    <EditText
        android:id="@+id/enterBalance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/shape_2"
        android:inputType="number"
        android:hint="@string/account_balance_prompt"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AccountBalance" />

    <TextView
        android:id="@+id/AccountType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/account_type"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterBalance" />

</androidx.constraintlayout.widget.ConstraintLayout>