<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Anylitics">

    <LinearLayout
        android:id="@+id/Background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/app_background"
        android:layout_marginBottom="60dp"
        android:layout_marginTop="-200dp"
        android:orientation="vertical">
    </LinearLayout>

    <FrameLayout
        android:id="@+id/headerBackgroundContainer"
        android:layout_width="match_parent"
        android:layout_height="43dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:id="@+id/headerBackground"
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:alpha="0.6"
            android:background="@color/headerGreen">

        </FrameLayout>

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/analytics_header_text"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="166dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="300dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/logo" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/StatsBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBackgroundContainer">

        <TextView
            android:id="@+id/txtStatHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/monthStats"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/txtArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/arrow"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/txtBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/balances"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/txtExpense"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginEnd="70dp"
            android:layout_marginTop="35dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/expense"
            android:layout_gravity="end"/>

        <TextView
            android:id="@+id/txtBalanceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="85dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/assets_value"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/txtExpenseValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="85dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/assets_value"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/txtMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="60dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/month"
            android:layout_gravity="start"/>

        <FrameLayout
            android:id="@+id/line_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="32dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/shape_2"/>

        <FrameLayout
        android:id="@+id/line_2"
        android:layout_width="2dp"
        android:layout_height="match_parent"
        android:layout_marginTop="42dp"
        android:layout_marginStart="185dp"
        android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
        android:background="@drawable/shape_2"/>

        <FrameLayout
            android:id="@+id/line_3"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="42dp"
            android:layout_marginStart="60dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/shape_2"/>

    </FrameLayout>

    <FrameLayout
        android:id="@+id/BudgetBlock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:background="@drawable/shape_1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatsBlock">

        <TextView
            android:id="@+id/txtBudgetHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/monthBudget"
            android:layout_gravity="start"/>

        <TextView
            android:id="@+id/txtArrow2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:layout_margin="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/arrow"
            android:layout_gravity="end"/>


        <TextView
            android:id="@+id/txtBudget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Budget:"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom"/>

        <TextView
            android:id="@+id/txtBudgetAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="60dp"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_gravity="bottom"/>
    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>